wiz-exercise/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-buddy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-buddy
  template:
    metadata:
      labels:
        app: movie-buddy
    spec:
      serviceAccountName: movie-buddy-sa
      containers:
        - name: movie-buddy
          image: 472151629584.dkr.ecr.us-east-1.amazonaws.com/movie-buddy:latest
          ports:
            - containerPort: 8501
